TS-3696 Fix range check in HdrHeap::attach_str_heap()

(cherry picked from commit df0b90c5c787378e642dcaf80a8c2cdaad10930a)

Conflicts:
	CHANGES